[tool.poetry]
name = "paper-scraper"
version = "0.1.0"
description = ""
authors = ["Pachwenko <pmccart4096@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.10.0"
selenium = "^4.1.0"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
